--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import "colors.css";
 table tr th,
 table tr td:not(:first-child){
 	text-align: center;
@@ -5,9 +6,6 @@ table tr td:not(:first-child){
 }
 table tr td:first-child input[type=checkbox]{
 	display: none;
-}
-.table-hover > tbody > tr:hover{
-	background-color: #DBEEF7;
 }
 .alert{
 	position: absolute;
