--- a/style.css
+++ b/style.css
@@ -14,6 +14,12 @@ table tr td:first-child input[type=checkbox]{
 .panel{
 	border: none;
 }
+.pointer{
+	cursor: pointer;
+}
+.pointer:hover{
+	background-color: #1cd3ee;
+}
 .alert{
 	position: absolute;
 	bottom: 0;
